# rebar

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  multiline.txt
.github/workflows/: ci-cd.yml
commands/: Cargo.toml
commands/src/: cat_file.rs  error.rs  hash_object.rs  init.rs  lib.rs  types.rs
src/: main.rs  utils.rs
src/commands/: cat_file.rs  hash_object.rs  init.rs  mod.rs
src/utils/: common.rs  errors.rs  globals.rs  mod.rs  types.rs
utils/: Cargo.toml  build.rs  config.json
utils/src/: errors.rs  globals.rs  lib.rs  types.rs  utils.rs
