[package]
name = "rebar"
version = "0.1.0"
description = "Version Control System inspired by Git"
keywords = ["vcs", "version control system"]
edition = "2024"
repository = "https://github.com/actuallyatiger/rebar"
license = "MIT"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
hex = "0.4.3"
zstd = "0.13.3"
sha2 = "0.10.9"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
